# SOSE25-Projekt

./: .gitignore  Anweisung-Test1.md  Anweisung-Test3.md  Fragebogen1.md  Fragebogen2.md  Fragebogen3.md  Game Design.md  Makefile  Playertest.md  README.md  build  docker-compose.yml  main.cpp  redeploy.sh  shell.nix  start-backend-windows.bat  start-backend.sh
client/: CMakeLists.txt  Client  Dataflow.drawio  Doxyfile  Makefile  README.md  Task.md  build  build-for-macos.sh  build_mac  generate-client-doc.sh  generate-docs.sh  http-adapter-explaination.md  install_dependencies.sh  main.cpp  mainpage.dox  run.sh  test.http  unx_setup.sh  websocket-adapter-explanation.md
client/OLD/: compile_and_run.sh
client/adapter/: Makefile  README.md  base64.h  definition.h  http-adapter.cpp  http-adapter.h  http_adapter  message-pack-helper.h  pong_adapter.h  run.sh  websocket-adapter.cpp  websocket-adapter.h  websocket.cpp  websocket.h  websocket_client  websocket_client.cpp  websocket_example.cpp
client/adapter/doc/: mock-adapter.md  ticket.md  websocket-adapter.md
client/adapter/mock/: Makefile  Makefile.simple  README.md  example.cpp  mock_http_adapter.cpp  mock_http_adapter.h
client/adapter/test/: Makefile  README_TESTING.md  adapter_test.cpp  hello_world  messagepack_example.cpp
client/core/: base.cpp  base.h  blitter.cpp  blitter.h  buffer.cpp  buffer.h  config.h  http-adapter.cpp  http-adapter.h  input.cpp  input.h  renderer.cpp  renderer.h  shader.cpp  shader.h  ui.cpp  ui.h  websocket.cpp  websocket.h  wheel.cpp  wheel.h
client/core/doc/: datatypes.md
client/core/shader/: atmosphere.frag  atmosphere.vert  bulb.frag  canvas.frag  canvas.vert  clouds.frag  clouds.vert  gpass.frag  gpass.vert  gshadow.vert  halo.frag  halo.vert  ipass.frag  ipass.vert  ishadow.vert  mesh.frag  mesh.vert  pbs.frag  planet.frag  planet.vert  shadow.frag  spaceship.frag  spaceship.vert  sprite.frag  sprite.vert  sun.frag  sun.vert  text.frag  text.vert
client/doc/: Task.md  basics.md  constants.md  crow.md  dataflow.md  datatypes.md  getting_started.md  index.md  logger.md  writing_style.md
client/docs/html/: _r_e_a_d_m_e_8md.html  _task_8md.html  annotated.html  annotated_dup.js  base_8cpp.html  base_8cpp.js  base_8cpp__incl.map  base_8cpp__incl.md5  base_8cpp_a233b02fb2ce89e834c1ca72f8b452f09_icgraph.map  base_8cpp_a9127751a0cb3be87af0c38a51d62b684_icgraph.map  base_8cpp_a9127751a0cb3be87af0c38a51d62b684_icgraph.md5  base_8h.html  base_8h.js  base_8h__dep__incl.map  base_8h__dep__incl.md5  base_8h__incl.map  base_8h__incl.md5  base_8h_a147406f07ab842b44b2dfa9275dc376a_icgraph.map  base_8h_a147406f07ab842b44b2dfa9275dc376a_icgraph.md5  base_8h_a233b02fb2ce89e834c1ca72f8b452f09_icgraph.md5  base_8h_source.html  basics_8md.html  blitter_8cpp.html  blitter_8cpp.js  blitter_8cpp__incl.map  blitter_8cpp__incl.md5  blitter_8cpp_a3d3a93cb3fac7b4f7c59771c77fa24de_icgraph.map  blitter_8cpp_a3d3a93cb3fac7b4f7c59771c77fa24de_icgraph.md5  blitter_8h.html  blitter_8h.js  blitter_8h__dep__incl.map  blitter_8h__dep__incl.md5  blitter_8h__incl.map  blitter_8h__incl.md5  blitter_8h_source.html  buffer_8cpp.html  buffer_8cpp.js  buffer_8cpp__incl.map  buffer_8cpp__incl.md5  buffer_8h.html  (+914 more)
client/docs/html/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  (+150 more)
client/docs/latex/: _task_8md.tex  annotated.tex  base_8cpp.tex  base_8cpp__incl.md5  base_8h.tex  base_8h__dep__incl.md5  base_8h__incl.md5  base_8h_a147406f07ab842b44b2dfa9275dc376a_icgraph.md5  base_8h_a233b02fb2ce89e834c1ca72f8b452f09_icgraph.md5  base_8h_a9127751a0cb3be87af0c38a51d62b684_icgraph.md5  base_8h_source.tex  basics_8md.tex  blitter_8cpp.tex  blitter_8cpp__incl.md5  blitter_8cpp_a3d3a93cb3fac7b4f7c59771c77fa24de_icgraph.md5  blitter_8h.tex  blitter_8h__dep__incl.md5  blitter_8h__incl.md5  blitter_8h_source.tex  buffer_8cpp.tex  buffer_8cpp__incl.md5  buffer_8h.tex  buffer_8h__dep__incl.md5  buffer_8h__incl.md5  buffer_8h_source.tex  camera__control_8cpp.tex  camera__control_8cpp__incl.md5  camera__control_8h.tex  camera__control_8h__dep__incl.md5  camera__control_8h__incl.md5  camera__control_8h_source.tex  class_bitwise_words.tex  class_bitwise_words_a77e0c868f7b60419d74682b08b995741_cgraph.md5  class_bitwise_words_ab7ea01c2f4bab4bc387f0702ec148dc9_icgraph.md5  class_camera3_d.tex  class_camera3_d_a1ae9f24b23a03551b8e59b75c2d7b522_icgraph.md5  class_camera3_d_ac53c8aa2b9cccb0f45086dab26ac8e3a_cgraph.md5  class_camera3_d_ae965c8566248d1102c5eb839ba8fa7ad_icgraph.md5  class_camera_controller.tex  class_camera_controller_a98b0e77fc306636462fad5db5005a1af_icgraph.md5  (+371 more)
client/lib/build_mac/: CMakeCache.txt  Makefile  cmake_install.cmake
client/res/: assets-showcase.html  player.blend
client/res/pdn_files/: button_confirm_on.pdn  textbox.pdn
client/res/planets/: earth_smap.xcf  ring.blend
client/res/ui/: textbox_square.pdn
client/script/: camera_control.cpp  camera_control.h  command_center.cpp  command_center.h  flotilla.cpp  flotilla.h  menu.cpp  menu.h  planet_focus.cpp  planet_focus.h  pong.cpp  pong.h  server_update.cpp  server_update.h  starsystem.cpp  starsystem.h  test.cpp  test.h  webcomm.cpp  webcomm.h
client/steps/step_0/: pong.cpp
client/steps/step_1/: pong.cpp
client/steps/step_2/: pong.cpp
client/steps/step_3/: pong.cpp
client/steps/step_n/: pong (copy).cpp  pong.cpp
client/steps/step_n1/: pong.cpp  pong.rs
client/tests/: INTEGRATION_TEST_README.md  integration_test.cpp  run_integration_test.sh  simple_integration_test  simple_integration_test.cpp
microservices/calculation_unit/: .gitignore  Cargo.toml  Dockerfile  dockerfile
microservices/calculation_unit/.helix/: config.toml
microservices/calculation_unit/src/: client_message.rs  lib.rs  logger.rs  main.rs  server_message.rs  websocket_format.rs
microservices/pong/: .gitignore  Cargo.toml  Dockerfile  shell.nix
microservices/pong/.helix/: config.toml
microservices/pong/src/: action.rs  ball.rs  client_message.rs  lib.rs  line.rs  main.rs  player.rs  pong.rs  score.rs  server_message.rs  threadpool.rs
(+108 files in other folders)
