[package]
name = "calculation_unit"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.0"
tokio-tungstenite = "0.17"
url = "2.3"
futures-util = "0.3.31"

[[bin]]
name = "client"
path = "src/bin/client.rs"
