[package]
name = "calculation_unit"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.0"
# tokio-tungstenite = "0.17"
url = "2.3"
futures-util = "0.3.31"
plotters = "0.3.7"
plotly = "0.12.1"
tokio-tungstenite = "0.26.2"
bytes = "1.10.1"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "plottest"
path = "src/bin/plottest.rs"

[[bin]]
name = "plottest3d"
path = "src/bin/plottest3d.rs"
