[package]
name = "pong"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
rmp-serde = "1.3.0"
serde = {version = "1.0.219", features = ["derive"]}
tokio = {version = "1.45.1", features = ["full"]}
warp = "0.3.7"
calculation_unit = {path = "../calculation_unit"}
macroquad = "0.4.14"
tokio-tungstenite = "0.26.2"
bytes = "1.10.1"
